feat: Implementação da rota PUT /users para alteração de senha.
